tests/errors/builtin-expects-plain-string/main.pa
# `built-in` needs a plain string literal tag, not an interpolated one.
def f :: fun int -> int = built-in "io-$(n)"
